--- a/MODAMSWeb/Areas/Identity/Pages/Account/LoginWithRecoveryCode.cshtml
+++ b/MODAMSWeb/Areas/Identity/Pages/Account/LoginWithRecoveryCode.cshtml
@@ -2,27 +2,45 @@
 @model LoginWithRecoveryCodeModel
 @{
     ViewData["Title"] = "Recovery code verification";
+    Layout = "_Layout1";
 }
 
-<h1>@ViewData["Title"]</h1>
-<hr />
-<p>
-    You have requested to log in with a recovery code. This login will not be remembered until you provide
-    an authenticator app code at log in or disable 2FA and log in again.
-</p>
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
-            <div class="form-floating mb-3">
-                <input asp-for="Input.RecoveryCode" class="form-control" autocomplete="off" placeholder="RecoveryCode" />
-                <label asp-for="Input.RecoveryCode" class="form-label"></label>
-                <span asp-validation-for="Input.RecoveryCode" class="text-danger"></span>
+<div class="container-login100">
+    <div class="wrap-login100 p-0">
+        <div class="card-body">
+            <span class="login100-form-title">
+                <img src="~/assets/images/brand/FGS.png" class="h-8" alt="">
+            </span>
+            <div class="text-wrap">
+                <p>
+                    Please provide your recovery code to login
+                </p>
             </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Log in</button>
-        </form>
+            <div class="row">
+                <div class="col-md-124">
+                    <form method="post">
+                        <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
+                        <div class="form-floating mb-3">
+                            <input asp-for="Input.RecoveryCode" class="form-control" autocomplete="off" placeholder="RecoveryCode" />
+                            <label asp-for="Input.RecoveryCode" class="form-label"></label>
+                            <span asp-validation-for="Input.RecoveryCode" class="text-danger"></span>
+                        </div>
+                        <button type="submit" class="w-100 btn btn-lg btn-primary">Log in</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="card-footer">
+            <div class="col-md-12 col-sm-12 text-center text-darkgray">
+                <span style="font-size:12px;">Developed by&nbsp;|&nbsp;</span><img src="~/assets/images/brand/unops_footer_logo.png">&nbsp;
+            </div>
+        </div>
     </div>
 </div>
+@*
+<h1>@ViewData["Title"]</h1>
+<hr />*@
+
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
