--- a/MODAMSWeb/Areas/Users/Views/Stores/Index.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Stores/Index.cshtml
@@ -22,12 +22,12 @@
                     <div class="col-md-3"><input type="text" id="txtSearchStore" class="form-control" placeholder="search for store" /></div>
 
                     <div class="btn-list">
-                        <a class="btn btn-outline-primary" asp-area="Users" asp-controller="Employees" asp-action="Index">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="w-inner-icn" enable-background="new 0 0 24 24" viewBox="0 0 24 24"><path d="M21.5,13h-8.0005493C13.2234497,13.0001831,12.9998169,13.223999,13,13.5v8.0005493C13.0001831,21.7765503,13.223999,22.0001831,13.5,22h8.0006104C21.7765503,21.9998169,22.0001831,21.776001,22,21.5v-8.0006104C21.9998169,13.2234497,21.776001,12.9998169,21.5,13z M21,21h-7v-7h7V21z M10.5,2H2.4993896C2.2234497,2.0001831,1.9998169,2.223999,2,2.5v8.0005493C2.0001831,10.7765503,2.223999,11.0001831,2.5,11h8.0006104C10.7765503,10.9998169,11.0001831,10.776001,11,10.5V2.4993896C10.9998169,2.2234497,10.776001,1.9998169,10.5,2z M10,10H3V3h7V10z M10.5,13H2.4993896C2.2234497,13.0001831,1.9998169,13.223999,2,13.5v8.0005493C2.0001831,21.7765503,2.223999,22.0001831,2.5,22h8.0006104C10.7765503,21.9998169,11.0001831,21.776001,11,21.5v-8.0006104C10.9998169,13.2234497,10.776001,12.9998169,10.5,13z M10,21H3v-7h7V21z M21.5,2h-8.0005493C13.2234497,2.0001831,12.9998169,2.223999,13,2.5v8.0005493C13.0001831,10.7765503,13.223999,11.0001831,13.5,11h8.0006104C21.7765503,10.9998169,22.0001831,10.776001,22,10.5V2.4993896C21.9998169,2.2234497,21.776001,1.9998169,21.5,2z M21,10h-7V3h7V10z" /></svg>
+                        @*<a id="btnCards" class="btn btn-primary" href="#">
+                            <svg id="svgCards" xmlns="http://www.w3.org/2000/svg" class="w-inner-icn text-white" enable-background="new 0 0 24 24" viewBox="0 0 24 24"><path d="M21.5,13h-8.0005493C13.2234497,13.0001831,12.9998169,13.223999,13,13.5v8.0005493C13.0001831,21.7765503,13.223999,22.0001831,13.5,22h8.0006104C21.7765503,21.9998169,22.0001831,21.776001,22,21.5v-8.0006104C21.9998169,13.2234497,21.776001,12.9998169,21.5,13z M21,21h-7v-7h7V21z M10.5,2H2.4993896C2.2234497,2.0001831,1.9998169,2.223999,2,2.5v8.0005493C2.0001831,10.7765503,2.223999,11.0001831,2.5,11h8.0006104C10.7765503,10.9998169,11.0001831,10.776001,11,10.5V2.4993896C10.9998169,2.2234497,10.776001,1.9998169,10.5,2z M10,10H3V3h7V10z M10.5,13H2.4993896C2.2234497,13.0001831,1.9998169,13.223999,2,13.5v8.0005493C2.0001831,21.7765503,2.223999,22.0001831,2.5,22h8.0006104C10.7765503,21.9998169,11.0001831,21.776001,11,21.5v-8.0006104C10.9998169,13.2234497,10.776001,12.9998169,10.5,13z M10,21H3v-7h7V21z M21.5,2h-8.0005493C13.2234497,2.0001831,12.9998169,2.223999,13,2.5v8.0005493C13.0001831,10.7765503,13.223999,11.0001831,13.5,11h8.0006104C21.7765503,10.9998169,22.0001831,10.776001,22,10.5V2.4993896C21.9998169,2.2234497,21.776001,1.9998169,21.5,2z M21,10h-7V3h7V10z" /></svg>
                         </a>
-                        <a class="btn btn-primary" href="#">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="w-inner-icn text-white" enable-background="new 0 0 24 24" viewBox="0 0 24 24"><path d="M3.5,12C3.223877,12,3,12.223877,3,12.5S3.223877,13,3.5,13S4,12.776123,4,12.5S3.776123,12,3.5,12z M6.5,8h15C21.776123,8,22,7.776123,22,7.5S21.776123,7,21.5,7h-15C6.223877,7,6,7.223877,6,7.5S6.223877,8,6.5,8z M3.5,17C3.223877,17,3,17.223877,3,17.5S3.223877,18,3.5,18S4,17.776123,4,17.5S3.776123,17,3.5,17z M21.5,12h-15C6.223877,12,6,12.223877,6,12.5S6.223877,13,6.5,13h15c0.276123,0,0.5-0.223877,0.5-0.5S21.776123,12,21.5,12z M3.5,7C3.223877,7,3,7.223877,3,7.5S3.223877,8,3.5,8S4,7.776123,4,7.5S3.776123,7,3.5,7z M21.5,17h-15C6.223877,17,6,17.223877,6,17.5S6.223877,18,6.5,18h15c0.276123,0,0.5-0.223877,0.5-0.5S21.776123,17,21.5,17z" /></svg>
-                        </a>
+                        <a id="btnList" class="btn btn-outline-primary" href="#">
+                            <svg id="svgList" xmlns="http://www.w3.org/2000/svg" class="w-inner-icn text-white" enable-background="new 0 0 24 24" viewBox="0 0 24 24"><path d="M3.5,12C3.223877,12,3,12.223877,3,12.5S3.223877,13,3.5,13S4,12.776123,4,12.5S3.776123,12,3.5,12z M6.5,8h15C21.776123,8,22,7.776123,22,7.5S21.776123,7,21.5,7h-15C6.223877,7,6,7.223877,6,7.5S6.223877,8,6.5,8z M3.5,17C3.223877,17,3,17.223877,3,17.5S3.223877,18,3.5,18S4,17.776123,4,17.5S3.776123,17,3.5,17z M21.5,12h-15C6.223877,12,6,12.223877,6,12.5S6.223877,13,6.5,13h15c0.276123,0,0.5-0.223877,0.5-0.5S21.776123,12,21.5,12z M3.5,7C3.223877,7,3,7.223877,3,7.5S3.223877,8,3.5,8S4,7.776123,4,7.5S3.776123,7,3.5,7z M21.5,17h-15C6.223877,17,6,17.223877,6,17.5S6.223877,18,6.5,18h15c0.276123,0,0.5-0.223877,0.5-0.5S21.776123,17,21.5,17z" /></svg>
+                        </a>*@
                     </div>
                 </div>
             </div>
@@ -39,7 +39,7 @@
         <div clsas="card">
             <div clsas="card-body p-4">
                 <div class="card">
-                    <div class="card-body project-list-table-container">
+                    <div id="dvCardBody" class="card-body project-list-table-container">
                         <div class="row" id="dvMainRow">
                             @{
                                 if (Model.vwStores.Count > 0)
@@ -134,123 +134,11 @@
         </div>
     </div>
 </div>
+<div id="dvStoreList" style="display:none;">
+
+</div>
 <section id="dvStoresData" style="display:none;">@Json.Serialize(Model.vwStores)</section>
 <section id="dvStoreEmployeesData" style="display:none;">@Json.Serialize(Model.storeEmployees)</section>
 @section scripts {
-
-    <!-- PROJECT-LIST JS-->
-    @*<script src="~/assets/js/project-list.js"></script>*@
-    <script>
-        $(document).ready(function () {
-            //$('#tblStores').DataTable({
-            //    language: {
-            //        searchPlaceholder: 'Search...',
-            //        sSearch: '',
-            //    }
-            //});
-            $("#txtSearchStore").on("input", () => {
-                searchStore();
-            });
-        });
-
-        function getEmployeelist(id) {
-            var sHtml = '';
-            var sData = $("#dvStoreEmployeesData").html();
-            if (sData != [] || sData != "") {
-                Data = JSON.parse(sData);
-                if (Data.length > 0) {
-                    Data.forEach((e) => {
-                        if (e.storeId == id) {
-                            sHtml += '<span><img src="' + e.imageUrl + '" alt="profile-user" class="avatar bradius cover-image"></span>';
-                        }
-                    });
-                }
-                if(sHtml=='')
-                    sHtml += '<span class="avatar bradius bg-primary">0</span>';
-            }
-            return sHtml;
-        }
-
-        const searchStore = () => {
-            var sData = $("#dvStoresData").html();
-            var Data = JSON.parse(sData);
-
-            var searchKeyword = $("#txtSearchStore").val();
-            var filteredData = $.grep(Data, function (item) {
-                var regex = new RegExp(searchKeyword, "i");
-                return regex.test(item.name);
-            });
-            if (filteredData.length > 0) {
-                var sHtml = '';
-                var bgType = '';
-                var sStoreType = '';
-                filteredData.forEach((e) => {
-                    if (e.storeType == 1) {
-                        bgType = 'bg-primary';
-                        sStoreType = '<span class="text-primary text-bold">Primary Store</span>';
-                    } else {
-                        bgType = 'bg-info-transparent';
-                        sStoreType = "Secondary Store";
-                    }
-                    var sEmployeeHtml = getEmployeelist(e.id);
-
-                    sHtml += `<div class="col-sm-12 col-md-12 col-lg-12 col-xl-4">
-                                                                                            <div class="card divShadow">
-                                                                                                <div class="card-body">
-                                                                                                    <div class="row">
-                                                                                                        <div class="col-md-12">
-                                                                                                            <div class="row">
-                                                                                                                <div class="col">
-                                                                                                                    <div class="d-sm-flex align-items-center">
-                                                                                                                        <div class="avatar mb-2 p-2 lh-1 mb-sm-0 avatar-md rounded-circle ` + bgType + ` me-2">
-                                                                                                                            <svg xmlns="http://www.w3.org/2000/svg" class="w-icn text-white" enable-background="new 0 0 24 24" viewBox="0 0 24 24"><path d="M4.2069702,12l5.1464844-5.1464844c0.1871338-0.1937866,0.1871338-0.5009155,0-0.6947021C9.1616211,5.9602051,8.8450928,5.9547119,8.6464844,6.1465454l-5.5,5.5c-0.000061,0-0.0001221,0.000061-0.0001221,0.0001221c-0.1951904,0.1951904-0.1951294,0.5117188,0.0001221,0.7068481l5.5,5.5C8.7401123,17.9474487,8.8673706,18.0001831,9,18c0.1325684,0,0.2597046-0.0526733,0.3533936-0.1464233c0.1953125-0.1952515,0.1953125-0.5118408,0.0001221-0.7070923L4.2069702,12z M20.8534546,11.6465454l-5.5-5.5c-0.1937256-0.1871948-0.5009155-0.1871948-0.6947021,0c-0.1986084,0.1918335-0.2041016,0.5083618-0.0122681,0.7069702L19.7930298,12l-5.1465454,5.1464844c-0.09375,0.09375-0.1464233,0.2208862-0.1464233,0.3534546C14.5,17.776062,14.723877,17.999939,15,18c0.1326294,0.0001221,0.2598267-0.0525513,0.3534546-0.1464844l5.5-5.5c0.000061-0.000061,0.0001221-0.000061,0.0001831-0.0001221C21.0487671,12.1581421,21.0487061,11.8416748,20.8534546,11.6465454z"></path></svg>
-                                                                                                                        </div>
-                                                                                                                        <div class="ms-1">
-                                                                                                                                            <h6 class="mb-1"> <a class="float-start text-bold" href="/Users/Stores/StoreDetails/` + e.id + `">` + e.name + `</a></h6>
-                                                                                                                            <span class="text-muted pe-2 fs-11 float-start mt-1">` + sStoreType + `</span>
-                                                                                                                        </div>
-                                                                                                                    </div>
-                                                                                                                </div>
-
-                                                                                                            </div>
-                                                                                                        </div>
-                                                                                                        <div class="col-md-12 mt-4">
-                                                                                                            <div class="row align-items-center">
-                                                                                                                <div class="col">
-                                                                                                                    <p class="m-0 mb-2">Members</p>
-                                                                                                                    <div class="avatar-list avatar-list-stacked">` + sEmployeeHtml + `</div>
-                                                                                                                </div>
-                                                                                                                <div class="col-auto">
-                                                                                                                    <p class="mb-0">
-                                                                                                                        <span class="text-muted d-block">Total Assets</span>
-                                                                                                                        <span class="text-primary text-bold float-end">` + e.totalCount + `</span>
-                                                                                                                    </p>
-                                                                                                                </div>
-                                                                                                            </div>
-                                                                                                        </div>
-                                                                                                        <div class="col-md-12 mt-4">
-                                                                                                            <div class="d-f-ai-c-jc-c">
-                                                                                                                <div class="row wp-100">
-                                                                                                                    <div class="col-md-6">
-                                                                                                                        <span class="text-muted d-block float-start">Initial Cost</span><br />
-                                                                                                                                <span class="text-primary text-bold float-start">` + Math.round(e.totalCost, 2).toLocaleString() + `</span>
-                                                                                                                    </div>
-                                                                                                                    <div class="col-md-6">
-                                                                                                                        <span class="text-muted d-block float-end">Current Value</span><br />
-                                                                                                                        <span class="text-primary text-bold float-end">` + Math.round(e.depCost, 2).toLocaleString() + `</span>
-                                                                                                                    </div>
-                                                                                                                </div>
-                                                                                                            </div>
-                                                                                                        </div>
-                                                                                                    </div>
-                                                                                                </div>
-                                                                                            </div>
-                                                                                        </div>`;
-                });
-                $("#dvMainRow").html("").html(sHtml);
-            }
-        }
-    </script>
-
-
+    <script src="~/js/user_stores_index.js"></script>
 }
