--- a/MODAMSWeb/Areas/Admin/Views/Departments/DepartmentHeads.cshtml
+++ b/MODAMSWeb/Areas/Admin/Views/Departments/DepartmentHeads.cshtml
@@ -1,4 +1,4 @@
-﻿@model MODAMS.Models.ViewModels.dtoDepartmentHeads
+﻿@model MODAMS.Models.ViewModels.Dto.dtoDepartmentHeads
 
 <style>
     .custom-row {
