--- a/MODAMSWeb/Areas/Admin/Views/Employees/CreateEmployee.cshtml
+++ b/MODAMSWeb/Areas/Admin/Views/Employees/CreateEmployee.cshtml
@@ -1,4 +1,4 @@
-﻿@model MODAMS.Models.ViewModels.dtoEmployee
+﻿@model MODAMS.Models.ViewModels.Dto.dtoEmployee
 
 <!-- PAGE-HEADER -->
 <div class="page-header">
