--- a/MODAMSWeb/Areas/Identity/Pages/Account/Manage/TwoFactorAuthentication.cshtml
+++ b/MODAMSWeb/Areas/Identity/Pages/Account/Manage/TwoFactorAuthentication.cshtml
@@ -64,7 +64,7 @@
                                 </form>
                             }
                             <a asp-page="./Disable2fa" class="btn btn-pill btn-outline-secondary">Disable 2FA</a>
-                            <a asp-page="./GenerateRecoveryCodes" class="btn btn-pill btn-outline-primary">Reset recovery codes</a>
+                            <a asp-page="./GenerateRecoveryCodes" class="btn btn-pill btn-outline-primary">Generate Recovery Codes</a>
                         }
 
                         @if (!Model.HasAuthenticator)
