--- a/MODAMSWeb/Areas/Users/Views/Assets/AssetDocuments.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Assets/AssetDocuments.cshtml
@@ -1,4 +1,4 @@
-﻿@model MODAMS.Models.ViewModels.dtoAssetDocument
+﻿@model MODAMS.Models.ViewModels.Dto.dtoAssetDocument
 <style>
     cardHeight {
         min-height: 600px;
