--- a/MODAMSWeb/Areas/Users/Views/Assets/AssetInfo.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Assets/AssetInfo.cshtml
@@ -1,5 +1,6 @@
-﻿@using System.Globalization;
-@model MODAMS.Models.ViewModels.dtoAssetInfo
+﻿@using System.Globalization
+@model MODAMS.Models.ViewModels.Dto.dtoAssetInfo
+
 @inject MODAMS.Utility.IAMSFunc _func
 
 <div class="page-header">
