--- a/MODAMSWeb/Areas/Users/Views/Home/Settings.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Home/Settings.cshtml
@@ -35,7 +35,7 @@
                 <h3 class="text-muted"><i class="fa fa-lock"></i> Two-Factor Authentication </h3>
                 <br />
                 <p style="font-size: 16px;">To enable Two Factor Authentication, please download and install Google Authenticator and follow the instructions on the next page</p>
-                <a href="/Identity/Account/Manage/TwoFactorAuthentication" class="btn btn-pill btn-outline-primary">Two Factor Authentication</a>
+                <a href="/Identity/Account/Manage/TwoFactorAuthentication" class="btn btn-pill btn-outline-primary"><i class="fa fa-lock"></i> Two Factor Authentication</a>
             </div>
         </div>
     </div>
