--- a/MODAMSWeb/Areas/Admin/Views/Departments/EditDepartment.cshtml
+++ b/MODAMSWeb/Areas/Admin/Views/Departments/EditDepartment.cshtml
@@ -1,4 +1,4 @@
-﻿@model MODAMS.Models.ViewModels.dtoDepartment
+﻿@model MODAMS.Models.ViewModels.Dto.dtoDepartment
 
 <!-- PAGE-HEADER -->
 <div class="page-header">
