--- a/MODAMSWeb/Areas/Identity/Pages/Account/Manage/ResetAuthenticator.cshtml
+++ b/MODAMSWeb/Areas/Identity/Pages/Account/Manage/ResetAuthenticator.cshtml
@@ -5,20 +5,30 @@
     ViewData["ActivePage"] = ManageNavPages.TwoFactorAuthentication;
 }
 
-<partial name="_StatusMessage" for="StatusMessage" />
-<h3>@ViewData["Title"]</h3>
-<div class="alert alert-warning" role="alert">
-    <p>
-        <span class="glyphicon glyphicon-warning-sign"></span>
-        <strong>If you reset your authenticator key your authenticator app will not work until you reconfigure it.</strong>
-    </p>
-    <p>
-        This process disables 2FA until you verify your authenticator app.
-        If you do not complete your authenticator app configuration you may lose access to your account.
-    </p>
+<div class="row">
+    <div class="col-md-12">
+        <div class="card">
+            <div class="card-body text-center h-50">
+                <partial name="_StatusMessage" for="StatusMessage" />
+                <h3>@ViewData["Title"]</h3>
+                <br /><br />
+                <div class="alert alert-secondary" role="alert">
+                    <p>
+                        <span class="glyphicon glyphicon-warning-sign"></span>
+                        <strong>If you reset your authenticator key your authenticator app will not work until you reconfigure it.</strong>
+                    </p>
+                    <p>
+                        This process disables 2FA until you verify your authenticator app.
+                        If you do not complete your authenticator app configuration you may lose access to your account.
+                    </p>
+                </div>
+                <div>
+                    <form id="reset-authenticator-form" method="post">
+                        <button id="reset-authenticator-button" class="btn btn-pill btn-outline-secondary" type="submit">Reset authenticator key</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
-<div>
-    <form id="reset-authenticator-form" method="post">
-        <button id="reset-authenticator-button" class="btn btn-danger" type="submit">Reset authenticator key</button>
-    </form>
-</div>
+
