--- a/MODAMSWeb/Areas/Users/Views/Assets/Index.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Assets/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model MODAMS.Models.ViewModels.dtoAssets
+﻿@model MODAMS.Models.ViewModels.Dto.dtoAssets
 
 <div class="page-header">
     <div>
@@ -141,6 +141,7 @@
     @*<script src="~/assets/js/project-list.js"></script>*@
     <script>
         $(document).ready(function () {
+            $("#hideMenu").click();
             $('#tblAssets').DataTable({
                 "createdRow": function (row, data, dataIndex) {
                     if (dataIndex % 2 == 1) {
