--- a/MODAMSWeb/Areas/Users/Views/Stores/Index.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Stores/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model MODAMS.Models.ViewModels.dtoStores
+﻿@model MODAMS.Models.ViewModels.Dto.dtoStores
 
 <!-- PAGE-HEADER -->
 <div class="page-header">
