--- a/MODAMSWeb/Areas/Users/Views/Alerts/Index.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Alerts/Index.cshtml
@@ -2,7 +2,7 @@
 
 <div class="page-header">
     <div>
-        <h1 class="page-title">Assets</h1>
+        <h1 class="page-title">Alerts</h1>
     </div>
     <div class="ms-auto pageheader-btn">
         <ol class="breadcrumb">
