--- a/MODAMSWeb/Views/Shared/_Layout.cshtml
+++ b/MODAMSWeb/Views/Shared/_Layout.cshtml
@@ -249,7 +249,7 @@
                 beforeSend: function () {
                 },
                 success: function (e) {
-                    //$("#alertCount").html('<span class="text-sm">' + e + '</span>');
+                    $("#alertCount").html(e);
                 },
                 complete: function () {
                     //loadProfile();
